--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "backend": "file:",
     "dotenv": "^16.4.5",
+    "express": "^4.21.0",
     "mongoose": "^8.7.0"
   }
 }
