--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "backend": "file:",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "mongoose": "^8.7.0"
+    "mongoose": "^8.7.0",
+    "openai": "^4.67.1"
   }
 }
