--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "backend": "file:",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.0",
+    "express": "^4.21.1",
+    "express-fileupload": "^1.5.1",
     "mongoose": "^8.7.0",
     "natural": "^8.0.1",
     "openai": "^4.67.1",
