--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "main": "Main.js",
   "scripts": {
     "test": "test",
-    "dev": "nodemon Main.js"
+    "dev": "nodemon Main.js",
+    "start": "node Main.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,12 +17,13 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-fileupload": "^1.5.1",
-    "mongoose": "^8.7.0",
+    "mongoose": "^8.7.3",
     "natural": "^8.0.1",
     "openai": "^4.67.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "concurrently": "^9.0.1",
     "nodemon": "^3.1.7"
   }
 }
